@@ -2,7 +2,7 @@ package Heaps;
 
 import java.util.ArrayList;
 
-public class Heap <T extends Comparable<T>>{
+public class Heap<T extends Comparable<T>> {
     private ArrayList<T> list;
     public Heap(){
         list=new ArrayList<>();
@@ -12,42 +12,43 @@ public class Heap <T extends Comparable<T>>{
         list.set(first,list.get(second));
         list.set(second,temp);
     }
-    private int parent(int i){
-        return (i-1)/2;
+    private int parent(int index){
+        return (index-1)/2;
     }
-    private int left(int i){
-        return (i)*2+1;
+    private int left(int index){
+        return (index*2)+1;
     }
-    private int right(int i){
-        return (i+1)*2;
+    private int right(int index){
+        return (index*2)+2;
     }
     public void insert(T value){
         list.add(value);
         upHeap(list.size()-1);
     }
-    private void upHeap(int i){
-        if(i==0){
+    private void upHeap(int index){
+        if(index==0){
             return;
         }
-        int p=parent(i);
-        if(list.get(i).compareTo(list.get(p))<0){
-            swap(i,p);
+        int p=parent(index);
+        if(list.get(index).compareTo(list.get(p))<0){
+            swap(index,p);
+            upHeap(p);
         }
-        upHeap(p);
     }
     public T remove() throws Exception{
-        if(list.isEmpty()){
+        if (list.isEmpty()){
             throw new Exception("Removing from an empty heap!");
         }
-        T temp=list.getFirst();
-        T last=list.removeLast();
-        if(!list.isEmpty()){
-            list.set(0,last);
+        T temp=list.get(0);
+        T last=list.remove(list.size()-1);
+        if(!list.isEmpty()) {
+            list.set(0, last);
             downHeap(0);
         }
         return temp;
     }
-    private void downHeap(int i){
+
+    private void downHeap(int i) {
         int min=i;
         int left=left(i);
         int right=right(i);
@@ -58,15 +59,8 @@ public class Heap <T extends Comparable<T>>{
             min=right;
         }
         if(min!=i){
-            swap(i,min);
+            swap(min,i);
             downHeap(min);
         }
-    }
-    public ArrayList<T> heapSort() throws Exception{
-        ArrayList<T> data=new ArrayList<>();
-        while (!list.isEmpty()){
-            data.add(this.remove());
-        }
-        return data;
     }
 }
